# VanadiumEngine

./: -.json  .gitignore  .gitmodules  CMakeLists.txt  FindHarfBuzz.cmake  README.md  RobinHoodPrinters.py  shaders.vcp
examples/: CMakeLists.txt
examples/atmosphere/: CMakeLists.txt
examples/atmosphere/include/: DataGeneratorModule.hpp  PlanetObject.hpp  ScatteringLUTPrecomputer.hpp
examples/atmosphere/include/framegraph_nodes/: PlanetRenderNode.hpp  ScatteringLUTNode.hpp
examples/atmosphere/shaders/: planet.frag  planet.json  planet.vert  skyview.comp  skyview.json  transmittance-compute.comp  transmittance.comp  transmittance.json
examples/atmosphere/shaders/functions/: common.glsl  skyview-compute.glsl  transmittance-compute.glsl
examples/atmosphere/src/: Atmosphere.cpp  DataGeneratorModule.cpp  ScatteringLUTPrecomputer.cpp
examples/atmosphere/src/framegraph_nodes/: PlanetRenderNode.cpp  ScatteringLUTNode.cpp
examples/helloworld/: CMakeLists.txt
examples/helloworld/include/: HelloWorld.hpp  VertexBufferUpdater.hpp
examples/helloworld/include/framegraph_nodes/: HelloTriangleNode.hpp  SwapchainClearNode.hpp
examples/helloworld/include/modules/: VertexBufferUpdateModule.hpp
examples/helloworld/shaders/: project.json  test.vcp  triangle.frag  triangle.vert
examples/helloworld/src/: HelloWorld.cpp  VertexBufferUpdater.cpp
examples/helloworld/src/framegraph_nodes/: HelloTriangleNode.cpp  SwapchainClearNode.cpp
examples/helloworld/src/modules/: VertexBufferUpdateModule.cpp
examples/minimalui/: CMakeLists.txt
examples/minimalui/fonts/: fontcfg.json
examples/minimalui/src/: EngineInit.cpp  SwapchainClearNode.cpp
examples/pipelines/: project.json
examples/tests/: CMakeLists.txt  TestUtilCommon.hpp
examples/tests/atmosphere/: CMakeLists.txt
examples/tests/atmosphere/transmittance/: AtmosphereParamsCommon.hpp  CMakeLists.txt  definitions.glsl  height_exp.cpp  opticaldepth_int.cpp  skyview.cpp  sphere_int.cpp
include/: Debug.hpp.in  Device.hpp  Engine.hpp  Log.hpp  PCH.hpp  QueueFamilyLayout.hpp  VDebug.hpp.in  VEngine.hpp  VModule.hpp
include/gpu/: Device.hpp  QueueFamilyLayout.hpp
include/graphics/: DeviceContext.hpp  GraphicsSubsystem.hpp  RenderContext.hpp  RenderPassSignature.hpp  RenderTargetSurface.hpp  WindowSurface.hpp
include/graphics/assets/: AssetLibrary.hpp  AssetStreamer.hpp
include/graphics/framegraph/: FramegraphContext.hpp  FramegraphNode.hpp  QueueBarrierGenerator.hpp  RenderTargetSurface.hpp  VFramegraphContext.hpp
include/graphics/frontend/: CommandBuffer.hpp  Descriptor.hpp  Device.hpp  Format.hpp  Instance.hpp  Pass.hpp  Pipeline.hpp  RefCounted.hpp  Resource.hpp  Surface.hpp  Swapchain.hpp  Synchronization.hpp  Transfer.hpp
include/graphics/helper/: DebugHelper.hpp  DescriptorSetAllocateInfoGenerator.hpp  EnumClassFlags.hpp  EnumerationHelper.hpp  ErrorHelper.hpp  TextureImageLoader.hpp
include/graphics/pipelines/: PipelineLibrary.hpp
include/graphics/util/: GPUDescriptorSetAllocator.hpp  GPUResourceAllocator.hpp  GPUTransferManager.hpp  RangeAllocator.hpp  VGPUResourceAllocator.hpp
include/helper/: EnumerationHelper.hpp  HashCombine.hpp  SharedLockGuard.hpp  Slotmap.hpp  SparseArray.hpp  SplitString.hpp  UTF8.hpp  VFramegraphStringAllocator.hpp  VMemoryLiterals.hpp  VModuleThread.hpp  VModuleThreadingInfo.h  VScoreboarding.hpp  VSlotmap.hpp  WholeFileReader.hpp
include/math/: Matrix.hpp  Vector.hpp
include/modules/gpu/: Device.hpp  VDevice.hpp  VGPUContext.hpp  VGPUDescriptorSetAllocator.hpp  VGPUModule.hpp  VGPUModuleGroup.hpp  VGPUResource.hpp  VGPUResourceAllocator.hpp  VQueueFamilyLayout.hpp
include/modules/window/: VGLFWWindowModule.hpp  VWindowModule.hpp
include/renderer/: Pass.hpp
include/timer/: TimerManager.hpp
include/ui/: Control.hpp  FontLibrary.hpp  FontRegistry.hpp  Shape.hpp  ShapeRegistry.hpp  SimpleShapeDataManager.hpp  SystemFontPaths.hpp  UIRenderer.hpp  UIRendererNode.hpp  UISubsystem.hpp
include/ui/functionalities/: ButtonFunctionality.hpp  NullFunctionality.hpp  TextBoxFunctionality.hpp
include/ui/layouts/: FreeLayout.hpp
include/ui/shapes/: DropShadowRect.hpp  FilledRect.hpp  FilledRoundedRect.hpp  Rect.hpp  Text.hpp
include/ui/styles/: NullStyle.hpp  RectStyle.hpp  TextBoxStyle.hpp
include/ui/util/: BreakClassRule.hpp  ControlPosition.hpp
include/util/: CompilerSpecific.hpp  HashCombine.hpp  MemoryLiterals.hpp  SharedLockGuard.hpp  Slotmap.hpp  SplitString.hpp  UTF8.hpp  Vector.hpp  WholeFileReader.hpp
include/windowing/: WindowInterface.hpp  WindowSettingsOverride.hpp
src/: Control.cpp  Device.cpp  Engine.cpp  HarfBuzzFreeType.cpp  VEngine.cpp  VModule.cpp  init.cpp  stb_impl.cpp
src/gpu/: Device.cpp
src/graphics/: DeviceContext.cpp  GraphicsSubsystem.cpp  RenderTargetSurface.cpp  WindowSurface.cpp
src/graphics/assets/: AssetLibrary.cpp  AssetStreamer.cpp
src/graphics/framegraph/: FramegraphContext.cpp  QueueBarrierGenerator.cpp  RenderTargetSurface.cpp
src/graphics/frontend/: Resource.cpp
src/graphics/pipelines/: PipelineLibrary.cpp
src/graphics/util/: RangeAllocator.cpp  (+3 more)
src/helper/: VModuleThread.cpp  VScoreboarding.cpp
src/renderer/: Pass.cpp
src/timer/: TimerManager.cpp
src/ui/: FontLibrary.cpp  Shape.cpp  UIRenderer.cpp  UIRendererNode.cpp  UISubsystem.cpp
src/windowing/: WindowInterface.cpp
tests/: CMakeLists.txt
tests/framework/: TestUtilCommon.hpp
tests/math/include/: TestList.hpp
tests/math/src/: MatrixTests.cpp  main.cpp
tools/: CMakeLists.txt
tools/EnumMatchTable/: generate.cpp  main.cpp  parsing_utils.hpp
tools/EnumMatchTable/include/: generate.hpp  parsing_utils.hpp
tools/EnumMatchTable/src/: generate.cpp  main.cpp
tools/LineBreakRules/src/: main.cpp
tools/common/include/: ParsingUtils.hpp
tools/fontcfg/src/: main.cpp
tools/vcp/include/: ParsingUtils.hpp  PipelineArchetypeRecord.hpp  PipelineInstanceRecord.hpp  PipelineStructs.hpp  ProjectDatabase.hpp  SysUtils.hpp  VCPFormat.hpp
tools/vcp/src/: PipelineArchetypeRecord.cpp  PipelineInstanceRecord.cpp  ProjectDatabase.cpp  SysUtils.cpp  main.cpp
(+47 files in other folders)
